--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ hr{
     padding-left: 0px;
 }
 
-#marketplace{
+#marketplace, #purchases{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -153,4 +153,25 @@ hr{
 
 #leaderboard > table{
     width: 90%;
+}
+
+#purchases > ol > li{
+    display: inline-block;
+    margin-left: 75px;
+    margin-right: 75px;
+    margin-top: 100px;
+    padding-left: 0px;
+    border: 5px solid white;
+}
+
+#purchases > ol{
+    padding-left: 0px;
+}
+
+#account > h1{
+    margin-top: 100px;
+    margin-bottom: 0px;
+    color: white;
+    text-align: center;
+    font-size: 50px;
 }
