--- a/style.css
+++ b/style.css
@@ -175,3 +175,37 @@ hr{
     text-align: center;
     font-size: 50px;
 }
+
+#purchase{
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+}
+
+#purchase > #purchase_img, #purchase_txt{
+    margin-right: 10%;
+}
+
+#purchase > #purchase_img{
+    padding-left: 10%;
+    padding-top: 10%;
+}
+
+#purchase_img > img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#purchase_txt{
+    color: white;
+    font-size: 35px;
+}
+
+.purchase_button{
+    width: 10%;
+    font-size: 25px;
+    font-family: "Futura PT Medium";
+    border-width: 1px;
+    background-color: white;
+}
