--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ hr{
     flex-direction: row;
 }
 
-#mine_textbox > form > input{
+#answer{
     width: 500px;
     height: 35px;
     font-size: 35px;
