--- a/style.css
+++ b/style.css
@@ -87,8 +87,8 @@ hr{
 }
 
 #post_mining_message{
-    border: 1px, white, solid;
-    padding: 10px 10px;
+    border: 1px solid white;
+    padding: 100px 100px;
     font-size: 10px;
 }
 
