--- a/style.css
+++ b/style.css
@@ -87,20 +87,20 @@ hr{
 }
 
 #post_mining_message{
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
     font-size: 25px;
     color: white;
 }
 
 #good_message{
     border: 1px solid white;
-    background-color: green;
+    background-color: rgb(111, 214, 111);
 }
 
 #bad_message{
     border: 1px solid white;
-    background-color: red;
+    background-color: rgb(255, 96, 96);
 }
 
 #sort{
