--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ hr{
 #mine_textbox{
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 #answer{
@@ -82,7 +83,6 @@ hr{
     border-width: 1px;
     background-color: white;
     margin-left: 10px;
-    margin-top: 0px;
     width: 100px;
     height: 35px;
 }
