--- a/style.css
+++ b/style.css
@@ -87,20 +87,19 @@ hr{
     align-items: center;
 }
 
-#post_mining_message{
-    padding-left: 30px;
-    padding-right: 30px;
+#post_mining_message > p{
+    border: 1px solid white;
+    padding-left: 5px;
+    padding-right: 5px;
     font-size: 25px;
     color: white;
 }
 
 #good_message{
-    border: 1px solid white;
     background-color: rgb(111, 214, 111);
 }
 
 #bad_message{
-    border: 1px solid white;
     background-color: rgb(255, 96, 96);
 }
 
