Change login stylesheet

--- a/style.css
+++ b/style.css
@@ -226,3 +226,10 @@ hr{
     border-width: 1px;
     background-color: white;
 }
+
+#login_form{
+    color: white;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
