--- a/style.css
+++ b/style.css
@@ -229,11 +229,10 @@ hr{
 
 #login{
     display: flex;
-    height: 100%;
     align-items: center;
     flex-direction: row;
     justify-content: space-evenly;
-    margin-top: 200px;
+    
 }
 
 #login_form{
@@ -241,9 +240,13 @@ hr{
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin-top: 200px;
+}
+
+#login_form > input{
+    margin-top: 5px;
 }
 
 #login_info{
     font-size: 20px;
-    width: 100px;
 }
