--- a/style.css
+++ b/style.css
@@ -87,12 +87,20 @@ hr{
     align-items: center;
 }
 
-#post_mining_message > p{
+.post_action_message > p{
     border: 1px solid white;
     padding-left: 5px;
     padding-right: 5px;
+    margin-bottom: 0px;
     font-size: 25px;
     color: white;
+    text-align: center;
+}
+
+.post_action_message{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #good_message{
