--- a/style.css
+++ b/style.css
@@ -204,31 +204,28 @@ hr{
 #purchase{
     display: flex;
     flex-direction: row;
-    justify-content: left;
+    justify-content: space-evenly;
     align-items: center;
 }
 
-#purchase > #purchase_img, #purchase_txt{
-    margin-right: 10%;
-}
-
 #purchase > #purchase_img{
-    padding-left: 10%;
-    padding-top: 10%;
+    padding-left: 5%;
+    padding-top: 5%;
 }
 
 #purchase_img > img{
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 50%;
+    max-height: 50%;
 }
 
 #purchase_txt{
     color: white;
     font-size: 35px;
+    margin-bottom: 0;
 }
 
-.purchase_button{
-    width: 10%;
+#purchase_button{
+    width: 75;
     font-size: 25px;
     font-family: "Futura PT Medium";
     border-width: 1px;
